--- a/index.html
+++ b/index.html
@@ -41,27 +41,27 @@
 
       <!-- ** NAVIGATION ** -->
       <div class="ten columns navi">
-        <div class="sp sp_navi mt_10">
+        <nav  class="sp sp_navi mt_10">
           <img id="sp_navi_btn" class="u-max-full-width" src="img/menu.png" alt="メニュー" srcset="img/menu@2x.png 2x"> 
           <ul class="sp_navi_li">
             <li><a href="#" class="mt_20">HOME</a></li>
-            <li><a href="#">ABOUT ME</a></li>
-            <li><a href="#">SERVICE</a></li>
-            <li><a href="#">SKILLS</a></li>
-            <li><a href="#">WORKS</a></li>
-            <li><a href="#" class="line_light mg_auto mt_20"><img href="./img/contact/icon_mail_flmwht.png" alt="CONTACT" srcset="./img/contact/icon_mail_flmwht@2x.png 2x"></a></li>
+            <li><a href="#aboutme">ABOUT ME</a></li>
+            <li><a href="#service">SERVICE</a></li>
+            <li><a href="#skills">SKILLS</a></li>
+            <li><a href="#works">WORKS</a></li>
+            <li><a href="mailto:satoko.ogino.32@gmail.com" class="line_light mg_auto mt_20"><img href="./img/contact/icon_mail_flmwht.png" alt="CONTACT" srcset="./img/contact/icon_mail_flmwht@2x.png 2x"></a></li>
           </ul>
-        </div>
-        <div class="pc pc_navi">
+        </nav>
+        <nav  class="pc pc_navi">
             <ul class="pc_navi_li">
-              <li><a href="#"><img href="./img/contact/icon_mail_wht.png" alt="CONTACT" srcset="./img/contact/icon_mail_wht@2x.png 2x"></a></li>
-              <li><a href="#">WORKS</a></li>
-              <li><a href="#">SKILLS</a></li>
-              <li><a href="#">SERVICE</a></li>
-              <li><a href="#">ABOUT ME</a></li>
+              <li><a href="mailto:satoko.ogino.32@gmail.com"><img href="./img/contact/icon_mail_wht.png" alt="CONTACT" srcset="./img/contact/icon_mail_wht@2x.png 2x"></a></li>
+              <li><a href="#works">WORKS</a></li>
+              <li><a href="#skills">SKILLS</a></li>
+              <li><a href="#service">SERVICE</a></li>
+              <li><a href="#aboutme">ABOUT ME</a></li>
               <li><a href="#">HOME</a></li>
             </ul>
-        </div>
+        </nav>
       </div><!-- ten columns -->
       </div><!-- row -->
       </div><!-- container -->
@@ -82,9 +82,9 @@
     <!--  <div class="twelve columns">-->
 
         <!-- ** ABOUT ME ** -->
-        <div id="aboutme">
+        <div id="aboutme" class="anchor">
           <h3>ABOUT ME</h3>
-          <img src="./img/about_me/img_profile.jpg" class="profile_img">
+          <img src="./img/top/about_me/img_profile.jpg" class="profile_img">
           <table class="profile_inf mg_auto ltr_spc_2 mt_20">
             <tbody>
               <tr>
@@ -105,7 +105,7 @@
         <div>        
 
         <!-- ** SERVICE ** -->
-            <div id="service">
+            <div id="service" class="anchor">
               <h3>SERVICE</h3>
               <ul class="service">
                 <li class="direction txt_clr_light txt_left ">
@@ -136,7 +136,7 @@
             </div><!-- service -->
 
         <!-- ** SKILLS ** -->
-        <div id="skills">
+        <div id="skills" class="anchor">
           <h3>SKILLS</h3>
           
           <!-- WEB DESIGN-->
@@ -152,36 +152,36 @@
           <p class="skill_inf txt_left txt_just">DESIGNキャリアの紹介、そこで身に着けた技術キャリアの紹介。キャリアの紹介、そこで身に着けた技術キャリアの紹介。キャリアの紹介、そこで身に着けた技術キャリアの紹介。</p>
           <ul class="skills skl_dsgn fnt_CntryGch">
             <li class="mt_10">
-              <img src="./img/skills/icon_photoshop.png" alt="Adobe Photoshop">
+              <img src="./img/top/skills/icon_photoshop.png" alt="Adobe Photoshop">
               <span>Adobe Photoshop</span>
             </li>
             <li class="mt_10">
-              <img src="./img/skills/icon_illustrator.png" alt="Adobe Illustrator">
+              <img src="./img/top/skills/icon_illustrator.png" alt="Adobe Illustrator">
               <span>Adobe Illustrator</span>
             </li>
             <li class="mt_10">
-              <img src="./img/skills/icon_xd.png" alt="Adobe Xd">
+              <img src="./img/top/skills/icon_xd.png" alt="Adobe Xd">
               <span>Adobe Xd</span>
             </li>
             <li class="mt_10">
-              <img src="./img/skills/icon_cacoo.png" alt="Cacoo">
+              <img src="./img/top/skills/icon_cacoo.png" alt="Cacoo">
               <span>Cacoo</span>
             </li>
             <li class="mt_10">
-              <img src="./img/skills/icon_html5.png" alt="html5">
+              <img src="./img/top/skills/icon_html5.png" alt="html5">
               <span>HTML5</span>
             </li>
             <li class="css3 mt_10">
-              <img src="./img/skills/icon_css3.png" alt="CSS3">
+              <img src="./img/top/skills/icon_css3.png" alt="CSS3">
               <p>CSS3,Sass,Skelton,</p>
               <p class="p_btm">Compass</p>
             </li>
             <li>
-              <img src="./img/skills/icon_js.png" alt="Javascript">
+              <img src="./img/top/skills/icon_js.png" alt="Javascript">
               <span>Javascript</span>
             </li>
             <li>
-              <img src="./img/skills/icon_jquery.png" alt="jQuery">
+              <img src="./img/top/skills/icon_jquery.png" alt="jQuery">
               <span>jQuery</span>
             </li>
           </ul>
@@ -195,36 +195,36 @@
           <p class="skill_inf txt_left txt_just">DEVELOPMENTキャリアの紹介、そこで身に着けた技術キャリアの紹介。キャリアの紹介、そこで身に着けた技術キャリアの紹介。キャリアの紹介、そこで身に着けた技術キャリアの紹介。</p>
           <ul class="skills skl_dsgn fnt_CntryGch">
             <li class="mt_10">
-              <img src="./img/skills/icon_photoshop.png" alt="Adobe Photoshop">
+              <img src="./img/top/skills/icon_photoshop.png" alt="Adobe Photoshop">
               <span>Adobe Photoshop</span>
             </li>
             <li class="mt_10">
-              <img src="./img/skills/icon_illustrator.png" alt="Adobe Illustrator">
+              <img src="./img/top/skills/icon_illustrator.png" alt="Adobe Illustrator">
               <span>Adobe Illustrator</span>
             </li>
             <li class="mt_10">
-              <img src="./img/skills/icon_xd.png" alt="Adobe Xd">
+              <img src="./img/top/skills/icon_xd.png" alt="Adobe Xd">
               <span>Adobe Xd</span>
             </li>
             <li class="mt_10">
-              <img src="./img/skills/icon_cacoo.png" alt="Cacoo">
+              <img src="./img/top/skills/icon_cacoo.png" alt="Cacoo">
               <span>Cacoo</span>
             </li>
             <li class="mt_10">
-              <img src="./img/skills/icon_html5.png" alt="html5">
+              <img src="./img/top/skills/icon_html5.png" alt="html5">
               <span>HTML5</span>
             </li>
             <li class="css3 mt_10">
-              <img src="./img/skills/icon_css3.png" alt="CSS3">
+              <img src="./img/top/skills/icon_css3.png" alt="CSS3">
               <p>CSS3,Sass,Skelton,</p>
               <p class="p_btm">Compass</p>
             </li>
             <li>
-              <img src="./img/skills/icon_js.png" alt="Javascript">
+              <img src="./img/top/skills/icon_js.png" alt="Javascript">
               <span>Javascript</span>
             </li>
             <li>
-              <img src="./img/skills/icon_jquery.png" alt="jQuery">
+              <img src="./img/top/skills/icon_jquery.png" alt="jQuery">
               <span>jQuery</span>
             </li>
           </ul>
@@ -238,36 +238,36 @@
           <p class="skill_inf txt_left txt_just">OTHERキャリアの紹介、そこで身に着けた技術キャリアの紹介。キャリアの紹介、そこで身に着けた技術キャリアの紹介。キャリアの紹介、そこで身に着けた技術キャリアの紹介。</p>
           <ul class="skills skl_dsgn fnt_CntryGch">
             <li class="mt_10">
-              <img src="./img/skills/icon_photoshop.png" alt="Adobe Photoshop">
+              <img src="./img/top/skills/icon_photoshop.png" alt="Adobe Photoshop">
               <span>Adobe Photoshop</span>
             </li>
             <li class="mt_10">
-              <img src="./img/skills/icon_illustrator.png" alt="Adobe Illustrator">
+              <img src="./img/top/skills/icon_illustrator.png" alt="Adobe Illustrator">
               <span>Adobe Illustrator</span>
             </li>
             <li class="mt_10">
-              <img src="./img/skills/icon_xd.png" alt="Adobe Xd">
+              <img src="./img/top/skills/icon_xd.png" alt="Adobe Xd">
               <span>Adobe Xd</span>
             </li>
             <li class="mt_10">
-              <img src="./img/skills/icon_cacoo.png" alt="Cacoo">
+              <img src="./img/top/skills/icon_cacoo.png" alt="Cacoo">
               <span>Cacoo</span>
             </li>
             <li class="mt_10">
-              <img src="./img/skills/icon_html5.png" alt="html5">
+              <img src="./img/top/skills/icon_html5.png" alt="html5">
               <span>HTML5</span>
             </li>
             <li class="css3 mt_10">
-              <img src="./img/skills/icon_css3.png" alt="CSS3">
+              <img src="./img/top/skills/icon_css3.png" alt="CSS3">
               <p>CSS3,Sass,Skelton,</p>
               <p class="p_btm">Compass</p>
             </li>
             <li>
-              <img src="./img/skills/icon_js.png" alt="Javascript">
+              <img src="./img/top/skills/icon_js.png" alt="Javascript">
               <span>Javascript</span>
             </li>
             <li>
-              <img src="./img/skills/icon_jquery.png" alt="jQuery">
+              <img src="./img/top/skills/icon_jquery.png" alt="jQuery">
               <span>jQuery</span>
             </li>
           </ul>
@@ -281,12 +281,12 @@
             <li>
               <table>
                 <tr>
-                  <th class="wrks_portfolio"><img src="./img/works/img_sht_portfolio.jpg"></th>
+                  <th class="wrks_portfolio"><img src="./img/top/works/img_sht_portfolio.jpg"></th>
                   <td class="wrks_inf">
                     <p>WEB SITE</p>
                     <h6>PORTFOLIO | SATOKO OGINO</h6>
                     <div class="line_night mg_auto mt_20"></div>
-                    <div class="wrks_btn"><span class="txt_center">MORE</span></div>
+                    <div class="wrks_btn"><span class="txt_center"><a href="./works/portfolio/work.html">MORE</a></span></div>
                   </td>
                 </tr>
               </table>
@@ -294,12 +294,12 @@
             <li>
               <table>
                 <tr>
-                  <th class="wrks_samplecompany"><img src="./img/works/img_sht_samplecompany.jpg"></th>
+                  <th class="wrks_samplecompany"><img src="./img/top/works/img_sht_samplecompany.jpg"></th>
                   <td class="wrks_inf">
                     <p>WEB SITE</p>
                     <h6>架空コーポレートサイト | SAMPLE COMPANY</h6>
                     <div class="line_night mg_auto mt_20"></div>
-                    <div class="wrks_btn"><span class="txt_center">MORE</span></div>
+                    <div class="wrks_btn"><span class="txt_center"><a href="./works/samplecompany/work.html">MORE</a></span></div>
                   </td>
                 </tr>
               </table>
@@ -307,12 +307,12 @@
             <li>
               <table>
                 <tr>
-                  <th class="wrks_appleberry"><img src="./img/works/img_sht_appleberry.jpg"></th>
+                  <th class="wrks_appleberry"><img src="./img/top/works/img_sht_appleberry.jpg"></th>
                   <td class="wrks_inf">
                     <p>WEB SITE</p>
                     <h6>架空ECサイト | APPLEBERRY</h6>
                     <div class="line_night mg_auto mt_20"></div>
-                    <div class="wrks_btn"><span class="txt_center">MORE</span></div>
+                    <div class="wrks_btn"><span class="txt_center"><a href="./works/appleberry/work.html">MORE</a></span></div>
                   </td>
                 </tr>
               </table>
@@ -320,12 +320,12 @@
             <li>
               <table>
                 <tr>
-                  <th class="wrks_iyashinoyu"><img src="./img/works/img_sht_iyashinoyu.jpg"></th>
+                  <th class="wrks_iyashinoyu"><img src="./img/top/works/img_sht_iyashinoyu.jpg"></th>
                   <td class="wrks_inf">
                     <p>BANNER</p>
                     <h6>架空WEB広告バナー | 癒しの湯</h6>
                     <div class="line_night mg_auto mt_20"></div>
-                    <div class="wrks_btn"><span class="txt_center">MORE</span></div>
+                    <div class="wrks_btn"><span class="txt_center"><a href="./works/iyashinoyu/work.html" target="brunk">MORE</a></span></div>
                   </td>
                 </tr>
               </table>
@@ -333,12 +333,12 @@
             <li>
               <table>
                 <tr>
-                  <th class="wrks_winterchocolate"><img src="./img/works/img_sht_winterchocolate.jpg"></th>
+                  <th class="wrks_winterchocolate"><img src="./img/top/works/img_sht_winterchocolate.jpg"></th>
                   <td class="wrks_inf">
                     <p>BANNER</p>
                     <h6>架空WEB広告バナー | 冬季限定チョコレート</h6>
                     <div class="line_night mg_auto mt_20"></div>
-                    <div class="wrks_btn"><span class="txt_center">MORE</span></div>
+                    <div class="wrks_btn"><span class="txt_center"><a href="./works/winterchocolate/work.html">MORE</a></span></div>
                   </td>
                 </tr>
               </table>
@@ -346,12 +346,12 @@
             <li>
               <table>
                 <tr>
-                  <th class="wrks_myicon"><img src="./img/works/img_sht_myicon.png"></th>
+                  <th class="wrks_myicon"><img src="./img/top/works/img_sht_myicon.png"></th>
                   <td class="wrks_inf">
                     <p>ILLSUT</p>
                     <h6>キャラクター制作</h6>
                     <div class="line_night mg_auto mt_20"></div>
-                    <div class="wrks_btn"><span class="txt_center">MORE</span></div>
+                    <div class="wrks_btn"><span class="txt_center"><a href="./works/illust/work.html">MORE</a></span></div>
                   </td>
                 </tr>
               </table>
@@ -359,12 +359,12 @@
             <li>
               <table>
                 <tr>
-                  <th class="wrks_myicon"><img src="./img/works/img_sht_myicon.png"></th>
+                  <th class="wrks_myicon"><img src="./img/top/works/img_sht_myicon.png"></th>
                   <td class="wrks_inf">
                     <p>ICON</p>
                     <h6>アイコン制作</h6>
                     <div class="line_night mg_auto mt_20"></div>
-                    <div class="wrks_btn"><span class="txt_center">MORE</span></div>
+                    <div class="wrks_btn"><span class="txt_center"><a href="./works/samplecopany/work.html">MORE</a></span></div>
                   </td>
                 </tr>
               </table>
@@ -380,17 +380,17 @@
   <footer>
     <div id="contact" class="fnt_SitkaSmall pt_20 mb_50 bg_clr_light">
       <h3>CONTACT</h3>
-      <img src="./img/contact/icon_mail_flmnavy.png">
+      <a href="mailto:satoko.ogino.32@gmail.com"><img src="./img/contact/icon_mail_flmnavy.png"></a>
     </div>
     <div class="pt_20"><a href="#"><img class="u-max-full-width" src="./img/icon_pagetop.png"></a></div>
     <div class="bg_clr_night txt_clr_light pt_40 pb_40 mt_20 clearfix">
         <div class="pb_20">
             <ul>
             <li><a href="#">HOME</a></li>
-            <li><a href="#">ABOUT ME</a></li>
-            <li><a href="#">SERVICE</a></li>
-            <li><a href="#">SKILLS</a></li>
-            <li><a href="#">WORKS</a></li>
+            <li><a href="#aboutme">ABOUT ME</a></li>
+            <li><a href="#service">SERVICE</a></li>
+            <li><a href="#skills">SKILLS</a></li>
+            <li><a href="#works">WORKS</a></li>
             </ul>
         </div>
         <p class="ms txt_clr_gold fnt_SitkaSmall txt-bld pb_10">Thank you for visiting my site.</p>
@@ -398,17 +398,9 @@
     </div>
   </footer>
   <!-- /footer -->
-
+  <script type="text/javascript" src="./js/nav.js"></script>
+  <script type="text/javascript" src="./js/scroll.js"></script>
   <script>
-    // NAVIGATION
-    $(function(){
-      $(document).ready(function() {
-        $("#sp_navi_btn").click(function(){
-          $(this).next().slideToggle();
-        });
-      });
-    });
-    
     //SKILLS SP-TGGL
     $(function(){
       $('.skl_tgl').click(function() {
