20190217 スクロール実装

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>PORTFOLIO-SITE | TOP | SATOKO OGINO</title>
+  <title>SATOKO OGINO | PORTFOLIO-SITE | TOP</title>
   <meta name="description" content="PORTFOLIO-SITE | SATOKO OGINO">
   <meta name="author" content="Satoko Ogino">
 
@@ -29,7 +29,7 @@
 </head>
 <body>
 
-  <header>
+  <header id="home">
     <div id="header_in" class="bg_clr_night txt_clr_light">
       <div class="container">
       <div class="row mb_5">
@@ -44,7 +44,7 @@
         <nav  class="sp sp_navi mt_10">
           <img id="sp_navi_btn" class="u-max-full-width" src="img/menu.png" alt="メニュー" srcset="img/menu@2x.png 2x"> 
           <ul class="sp_navi_li">
-            <li><a href="#" class="mt_20">HOME</a></li>
+            <li><a href="#home" class="mt_20">HOME</a></li>
             <li><a href="#aboutme">ABOUT ME</a></li>
             <li><a href="#service">SERVICE</a></li>
             <li><a href="#skills">SKILLS</a></li>
@@ -59,7 +59,7 @@
               <li><a href="#skills">SKILLS</a></li>
               <li><a href="#service">SERVICE</a></li>
               <li><a href="#aboutme">ABOUT ME</a></li>
-              <li><a href="#">HOME</a></li>
+              <li><a href="#home">HOME</a></li>
             </ul>
         </nav>
       </div><!-- ten columns -->
@@ -281,12 +281,12 @@
             <li>
               <table>
                 <tr>
-                  <th class="wrks_portfolio"><img src="./img/top/works/img_sht_portfolio.jpg"></th>
+                  <th class="wrks_portfolio"><a href="./works/portfolio/work.html" ><img src="./img/top/works/img_sht_portfolio.jpg"></a></th>
                   <td class="wrks_inf">
                     <p>WEB SITE</p>
                     <h6>PORTFOLIO | SATOKO OGINO</h6>
                     <div class="line_night mg_auto mt_20"></div>
-                    <div class="wrks_btn"><span class="txt_center"><a href="./works/portfolio/work.html">MORE</a></span></div>
+                    <a href="./works/portfolio/work.html"><div class="wrks_btn"><span class="txt_center">MORE</span></div></a>
                   </td>
                 </tr>
               </table>
@@ -294,12 +294,12 @@
             <li>
               <table>
                 <tr>
-                  <th class="wrks_samplecompany"><img src="./img/top/works/img_sht_samplecompany.jpg"></th>
+                  <th class="wrks_samplecompany"><a href="./works/samplecompany/work.html"><img src="./img/top/works/img_sht_samplecompany.jpg"></a></th>
                   <td class="wrks_inf">
                     <p>WEB SITE</p>
-                    <h6>架空コーポレートサイト | SAMPLE COMPANY</h6>
+                    <h6>架空コーポレートサイト | 株式会社サンプル SAMPLE COMPANY</h6>
                     <div class="line_night mg_auto mt_20"></div>
-                    <div class="wrks_btn"><span class="txt_center"><a href="./works/samplecompany/work.html">MORE</a></span></div>
+                    <a href="./works/samplecompany/work.html"><div class="wrks_btn"><span class="txt_center">MORE</span></div></a>
                   </td>
                 </tr>
               </table>
@@ -307,12 +307,12 @@
             <li>
               <table>
                 <tr>
-                  <th class="wrks_appleberry"><img src="./img/top/works/img_sht_appleberry.jpg"></th>
+                  <th class="wrks_appleberry"><a href="./works/appleberry/work.html"><img src="./img/top/works/img_sht_appleberry.jpg"></a></th>
                   <td class="wrks_inf">
                     <p>WEB SITE</p>
-                    <h6>架空ECサイト | APPLEBERRY</h6>
+                    <h6>架空ECサイト | APPLE BERRY made with B</h6>
                     <div class="line_night mg_auto mt_20"></div>
-                    <div class="wrks_btn"><span class="txt_center"><a href="./works/appleberry/work.html">MORE</a></span></div>
+                    <a href="./works/appleberry/work.html"><div class="wrks_btn"><span class="txt_center">MORE</span></div></a>
                   </td>
                 </tr>
               </table>
@@ -320,12 +320,12 @@
             <li>
               <table>
                 <tr>
-                  <th class="wrks_iyashinoyu"><img src="./img/top/works/img_sht_iyashinoyu.jpg"></th>
+                  <th class="wrks_iyashinoyu"><a href="./works/iyashinoyu/work.html"><img src="./img/top/works/img_sht_iyashinoyu.jpg"></a></th>
                   <td class="wrks_inf">
                     <p>BANNER</p>
                     <h6>架空WEB広告バナー | 癒しの湯</h6>
                     <div class="line_night mg_auto mt_20"></div>
-                    <div class="wrks_btn"><span class="txt_center"><a href="./works/iyashinoyu/work.html" target="brunk">MORE</a></span></div>
+                    <a href="./works/iyashinoyu/work.html"><div class="wrks_btn"><span class="txt_center">MORE</span></div></a>
                   </td>
                 </tr>
               </table>
@@ -333,12 +333,12 @@
             <li>
               <table>
                 <tr>
-                  <th class="wrks_winterchocolate"><img src="./img/top/works/img_sht_winterchocolate.jpg"></th>
+                  <th class="wrks_winterchocolate"><a href="./works/winterchocolate/work.html"><img src="./img/top/works/img_sht_winterchocolate.jpg"></a></th>
                   <td class="wrks_inf">
                     <p>BANNER</p>
                     <h6>架空WEB広告バナー | 冬季限定チョコレート</h6>
                     <div class="line_night mg_auto mt_20"></div>
-                    <div class="wrks_btn"><span class="txt_center"><a href="./works/winterchocolate/work.html">MORE</a></span></div>
+                    <a href="./works/winterchocolate/work.html"><div class="wrks_btn"><span class="txt_center">MORE</span></div></a>
                   </td>
                 </tr>
               </table>
@@ -346,7 +346,7 @@
             <li>
               <table>
                 <tr>
-                  <th class="wrks_myicon"><img src="./img/top/works/img_sht_myicon.png"></th>
+                  <th class="wrks_myicon"><a href="./works/illust/work.html"><img src="./img/top/works/img_sht_myicon.png"></a></th>
                   <td class="wrks_inf">
                     <p>ILLSUT</p>
                     <h6>キャラクター制作</h6>
@@ -359,12 +359,12 @@
             <li>
               <table>
                 <tr>
-                  <th class="wrks_myicon"><img src="./img/top/works/img_sht_myicon.png"></th>
+                  <th class="wrks_myicon"><a href="./works/samplecompany/work.html"><img src="./img/top/works/img_sht_myicon.png"></a></th>
                   <td class="wrks_inf">
                     <p>ICON</p>
                     <h6>アイコン制作</h6>
                     <div class="line_night mg_auto mt_20"></div>
-                    <div class="wrks_btn"><span class="txt_center"><a href="./works/samplecopany/work.html">MORE</a></span></div>
+                    <div class="wrks_btn"><span class="txt_center"><a href="./works/samplecompany/work.html">MORE</a></span></div>
                   </td>
                 </tr>
               </table>
@@ -382,11 +382,11 @@
       <h3>CONTACT</h3>
       <a href="mailto:satoko.ogino.32@gmail.com"><img src="./img/contact/icon_mail_flmnavy.png"></a>
     </div>
-    <div class="pt_20"><a href="#"><img class="u-max-full-width" src="./img/icon_pagetop.png"></a></div>
+    <div class="pt_20"><a href="#home"><img class="u-max-full-width" src="./img/icon_pagetop.png"></a></div>
     <div class="bg_clr_night txt_clr_light pt_40 pb_40 mt_20 clearfix">
         <div class="pb_20">
             <ul>
-            <li><a href="#">HOME</a></li>
+            <li><a href="#home">HOME</a></li>
             <li><a href="#aboutme">ABOUT ME</a></li>
             <li><a href="#service">SERVICE</a></li>
             <li><a href="#skills">SKILLS</a></li>
